--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -22,6 +22,10 @@
       column-gap: 72px!important;
     }
 
+    .desktop-gap-x-5 {
+      column-gap: 72px!important;
+    }
+
     .desktop-height-214 {
       height: 214px;
     }
