--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -11,21 +11,21 @@
 
 {% if post.thumbnail %}
     <div>
-        <img loading="lazy" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
+        <img class="w-full h-[600px] object-cover" loading="lazy" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
     </div>
 {% endif %}
 
-<div class="grid grid-cols-2 layout-content text-center my-5">
-<div>
-    <h3>{{ post.meta('subtitle_1') }}</h3>
-    <p>{{ post.meta('description_1') }}</p>
-    <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_1') }}">{{ post.meta('button_label_1') }}</a>
-</div>
-<div>
-    <h3>{{ post.meta('subtitle_2') }}</h3>
-    <p>{{ post.meta('description_2') }}</p>
-    <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_2') }}">{{ post.meta('button_label_2') }}</a>
-</div>
+<div class="grid desktop:grid-cols-2 desktop:gap-x-3 page-max absolute top-[550px] mx-[100px]">
+    <div class="bg-white p-4 w-full">
+        <h3 class="mb-4">{{ post.meta('subtitle_1') }}</h3>
+        <p class="mb-4">{{ post.meta('description_1') }}</p>
+        <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_1') }}">{{ post.meta('button_label_1') }}</a>
+    </div>
+    <div class="bg-white p-4 w-full">
+        <h3 class="mb-4">{{ post.meta('subtitle_2') }}</h3>
+        <p class="mb-4">{{ post.meta('description_2') }}</p>
+        <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_2') }}">{{ post.meta('button_label_2') }}</a>
+    </div>
 </div>
 
 </div>
