--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -3,30 +3,34 @@
 {% block content %}
 <div>
 
-<div class="layout-content text-center my-5">
-    <h1>{{ post.post_title }}</h1>
+    <div class="layout-content text-center my-5">
+        <h1>{{ post.post_title }}</h1>
 
-    {{ post.post_content }}
-</div>
+        {{ post.post_content }}
+    </div>
 
-{% if post.thumbnail %}
-    <div>
-        <img class="w-full h-[600px] object-cover" loading="lazy" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
-    </div>
-{% endif %}
+    <div class="relative">
+        {% if post.thumbnail %}
+            <div>
+                <img class="w-full h-[830px] desktop:h-[600px] object-cover" loading="lazy" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
+            </div>
+        {% endif %}
 
-<div class="grid desktop:grid-cols-2 desktop:gap-x-3 page-max absolute top-[550px] mx-[100px]">
-    <div class="bg-white p-4 w-full">
-        <h3 class="mb-4">{{ post.meta('subtitle_1') }}</h3>
-        <p class="mb-4">{{ post.meta('description_1') }}</p>
-        <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_1') }}">{{ post.meta('button_label_1') }}</a>
+        <div class="absolute top-[168px] tablet:top-[250px] desktop:top-[300px] w-full">
+            <div class="relative grid desktop:grid-cols-2 gap-3">
+                <div class="mx-3 tablet:mx-auto desktop:ml-auto desktop:mr-0 tablet:w-4/5 grid bg-white p-4">
+                    <h3 class="mx-auto mb-4 text-center">{{ post.meta('subtitle_1') }}</h3>
+                    <p class="mx-auto mb-4 text-center">{{ post.meta('description_1') }}</p>
+                    <a class="mx-auto btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_1') }}">{{ post.meta('button_label_1') }}</a>
+                </div>
+                <div class="mx-3 tablet:mx-auto desktop:mr-auto desktop:ml-0 tablet:w-4/5 grid bg-white p-4">
+                    <h3 class="mx-auto mb-4 text-center">{{ post.meta('subtitle_2') }}</h3>
+                    <p class="mx-auto mb-4 text-center">{{ post.meta('description_2') }}</p>
+                    <a class="mx-auto btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_2') }}">{{ post.meta('button_label_2') }}</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="bg-white p-4 w-full">
-        <h3 class="mb-4">{{ post.meta('subtitle_2') }}</h3>
-        <p class="mb-4">{{ post.meta('description_2') }}</p>
-        <a class="mt-2 btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_2') }}">{{ post.meta('button_label_2') }}</a>
-    </div>
-</div>
 
 </div>
 {% endblock %}
