--- a/wp-content/themes/workingnyc/views/employer-home-page.twig
+++ b/wp-content/themes/workingnyc/views/employer-home-page.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="bg-scale-1">
-  <header class="employer-header-gradient {% if post.thumbnail %}bg-shape-wnyc-header{% endif %} w-full">
+  <header class="employer-header-gradient {% if post.thumbnail %}bg-shape-wnyc-header{% endif %} w-full flex justify-center">
       {% if post.thumbnail %}
       <div class="desktop:gap-x-5 tablet-gap-x-56 desktop:flex desktop:pl-[104px] site-max-width w-full desktop:px-0 tablet:px-5 px-2 py-4 tablet:py-5 desktop:py-0">
         <div class="desktop-py-121">
