--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -62,6 +62,52 @@
       {% include 'employer-programs/employer-program.twig' with { post: program } %}
       </div>
       {% endfor %}
+          <div class="carousel-container">
+            <div class="inner-carousel">
+              <div class="track">
+                <div class="card-container">
+                  <div class="card card1">Card 1</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card2">Card 2</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card3">Card 3</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card4">Card 4</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card5">Card 5</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card6">Card 6</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card7">Card 7</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card8">Card 8</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card9">Card 9</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card10">Card 10</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card11">Card 11</div>
+                </div>
+                <div class="card-container">
+                  <div class="card card12">Card 12</div>
+                </div>
+              </div>
+              <div class="nav">
+                <button class="prev"><i class="fas fa-arrow-left fa-2x"></i></button>
+                <button class="next"><i class="fas fa-arrow-right fa-2x"></i></button>
+              </div>
+            </div>
+          </div>
     </div>
   </div>
 </div>
