--- a/wp-content/themes/workingnyc/views/objects/navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/navigation.twig
@@ -1,4 +1,8 @@
-<nav aria-label="{{ header_menu.name }}" class="o-navigation o-navigation-fixed" data-js="navigation">
+{% if employer == true %}
+<nav aria-label="TODO" class="o-navigation o-navigation-fixed" data-js="navigation">
+{% else %}
+<nav aria-label="{{ job_seeker_header_menu.name }}" class="o-navigation o-navigation-fixed" data-js="navigation">
+{% endif %}
   <a class="o-navigation__home o-navigation__menu-item bg-scale-1 tablet:bg-transparent" href="{{ site.url }}">
     <span class="sr-only">Job Ready by Jobs N Y C</span>
 
@@ -11,9 +15,15 @@
     </svg>
   </a>
 
-  {% for menu_item in header_menu.get_items %}
-  <a class="o-navigation__item" href="{{ menu_item.link }}">{{ menu_item.title }}</a>
-  {% endfor %}
+  {% if talent_portal_landing_page == false %}
+    {% if employer == true %}
+    {# Add employer menu items here #}
+    {% else %}
+      {% for menu_item in job_seeker_header_menu.get_items %}
+      <a class="o-navigation__item" href="{{ menu_item.link }}">{{ menu_item.title }}</a>
+      {% endfor %}
+    {% endif %}
+  {% endif %}
 
   <button class="o-navigation__menu-item" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
     <svg class="o-navigation__menu-icon icon-ui">
@@ -23,6 +33,7 @@
     <span class="o-navigation__menu-label">{{ __('Languages', 'WNYC') }}</span>
   </button>
   
+  {% if talent_portal_landing_page == false and employer == false %}
   <button class="o-navigation__item desktop:m-0" aria-controls="aria-c-search" aria-expanded="false" data-dialog="open" data-js="search">
     <svg class="o-navigation__menu-icon icon-ui">
       <title>{{__('Search', 'WNYC')}}</title>
@@ -30,6 +41,7 @@
     </svg>
     <span class="o-navigation__menu-label">{{__('Search', 'WNYC') }}</span>
   </button>
+  {% endif %}
 
   <button class="o-navigation__menu-item desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
     <svg class="o-navigation__menu-icon icon-ui">
