--- a/wp-content/themes/workingnyc/views/objects/menu.twig
+++ b/wp-content/themes/workingnyc/views/objects/menu.twig
@@ -20,11 +20,13 @@
         <a class="o-menu__nav-item" href="{{ site.url }}" tabindex="-1">{{ __('Home', 'WNYC') }}</a>
 
         {% if employer == true %}
-        {# Add employer menu items here #}
+          {% for menu_item in employer_header_menu.get_items %}
+          <a class="o-menu__nav-item" href="{{ menu_item.link }}" tabindex="-1">{{ menu_item.title }}</a>
+          {% endfor %}
         {% else %}
-        {% for menu_item in job_seeker_header_menu.get_items %}
-        <a class="o-menu__nav-item" href="{{ menu_item.link }}" tabindex="-1">{{ menu_item.title }}</a>
-        {% endfor %}
+          {% for menu_item in job_seeker_header_menu.get_items %}
+          <a class="o-menu__nav-item" href="{{ menu_item.link }}" tabindex="-1">{{ menu_item.title }}</a>
+          {% endfor %}
         {% endif %}
       </nav>
     </div>
