--- a/wp-content/themes/workingnyc/src/scss/_imports.scss
+++ b/wp-content/themes/workingnyc/src/scss/_imports.scss
@@ -4,6 +4,7 @@
 @forward 'utilities/margins/margins';
 @forward 'utilities/sizes/sizes';
 @forward 'utilities/colors/colors';
+@forward 'utilities/navigation/navigation';
 @forward '@nycopportunity/pttrn-scripts/src/spinner/spinner';
 
 @forward 'tokens';
