--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="bg-white">
 
-    <div class="layout-content text-center my-5">
+    <div class="layout-content text-center py-5">
         <h1>{{ post.post_title }}</h1>
 
         {{ post.post_content }}
