landing page navigation, except language selector

--- a/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
@@ -1,9 +1,9 @@
-<nav aria-label="Header menu" class="bgcolor-white px-3 relative shadow-none desktop:shadow-[2px_2px_20px_0px_#D4D7DC] desktop:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
+<nav aria-label="Header menu" class="z-40 bg-[#F8F9FB] desktop:bg-white px-3 relative shadow-none desktop:shadow-[2px_2px_20px_0px_#D4D7DC] desktop:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
   <div class="desktop:bg-white bg-slate-300 flex justify-between">
     <div class="flex">
       <a href="{{ site.url }}" class="my-auto">
-        <svg aria-hidden="true" class="o-navigation__svg hidden tablet:hidden desktop:block fill-text text-brand" width="51" height="16">
-          <use href="#logo-nyc-black"></use>
+        <svg aria-hidden="true" class="o-navigation__svg hidden tablet:hidden desktop:block fill-text text-brand" width="110" height="18">
+          <use href="#logo-nyc-mycity"></use>
         </svg>
       </a>
       <div class="hidden tablet:block desktop:block desktop:pl-1 my-auto float-left desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC') }}</div>
@@ -16,15 +16,18 @@
     </button>
   </div>
 </nav>
-<nav aria-label="Header menu" class="relative bg-white mobile-border-b-line desktop:hidden px-3 py-1 shadow-none tablet:shadow-[2px_2px_20px_0px_#D4D7DC] tablet:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
+<nav aria-label="Header menu" class="z-30 h-7 flex relative bg-white mobile-border-b-line desktop:hidden px-3 py-1 shadow-none tablet:shadow-[2px_2px_20px_0px_#D4D7DC] tablet:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
   <div class="o-navigation__home m-auto tablet:ml-0 bg-scale-1 tablet:bg-transparent">
-  <a class="pr-2" href="{{ site.url }}">
-    <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="51" height="16">
+  <a href="{{ site.url }}">
+    <svg aria-hidden="true" class="o-navigation__svg hidden tablet:flex fill-text text-brand" width="51" height="16">
       <use href="#logo-nyc-black"></use>
+    </svg>
+    <svg aria-hidden="true" class="o-navigation__svg tablet:hidden fill-text text-brand" width="110" height="18">
+      <use href="#logo-nyc-mycity"></use>
     </svg>
   </a>
   </div>
 </nav>
-<nav class="px-3 relative bg-white tablet:hidden shadow-[2px_2px_20px_0px_#D4D7DC]" data-js="navigation">
-     <span class="py-1 m-auto mobile-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
+<nav class="z-20 px-3 py-1 relative text-center bg-white tablet:hidden shadow-[2px_2px_20px_0px_#D4D7DC]" data-js="navigation">
+     <span class="m-auto mobile-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
 </nav>
