--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -1,45 +1,45 @@
-<nav aria-label="{{ job_seeker_header_menu.name }}" class="bgcolor-white px-2 tablet:px-5 desktop:px-3 desktop:py-1 o-navigation" data-js="navigation">
-  <a class="center-align tablet:pr-2" href="{{ site.url }}">
-    <svg aria-hidden="true" class="o-navigation__svg desktop:hidden fill-text text-brand" width="56" height="18">
-      <use href="#logo-nyc-black"></use>
-    </svg>
-  </a>
-    <span class="hidden tablet:block desktop:block o-navigation__home center-align float-left desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
-
-  <button class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
-    <svg class="h-3 w-3">
-      <use href="#languages-nav"></use>
+<nav aria-label="{{ job_seeker_header_menu.name }}" class="bg-[#F8F9FB] px-2 tablet:px-5 desktop:px-3 py-1 flex justify-between align-middle items-center" data-js="navigation">
+  <div class="flex">
+    <a class="desktop:hidden tablet:pr-2" href="{{ site.url }}">
+      <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="56" height="18">
+        <use href="#logo-nyc-black"></use>
+      </svg>
+    </a>
+    <span class="hidden tablet:block desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
+  </div>
+  <div>
+    <button class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+      <svg class="h-3 w-3">
+        <use href="#languages-nav"></use>
+      </svg>
       <span class="text-xs desktop:text-sm">{{ __('Language | English', 'WNYC - Navigation') }}</span>
-    </svg>
-  </button>
-  <button class="o-navigation__item desktop:mr-24" aria-controls="aria-c-search" aria-expanded="false" data-dialog="open" data-js="search">
-    <svg class="o-navigation__menu-icon icon-ui">
-      <title>{{__('Search', 'WNYC - Navigation')}}</title>
-      <use href="#lucide-search"></use>
-    </svg>
-  </button>
-  
+    </button>
+  </div>
   {% include 'objects/menu.twig' %}
 </nav>
-<nav aria-label="{{ job_seeker_header_menu.name }}" class="desktop-nav-border px-2 tablet:px-5 desktop:px-3 desktop:pb-3 o-navigation" data-js="navigation">
-  <div class="o-navigation__home center-align bg-scale-1 tablet:bg-transparent">
-    <a class="pr-2 hidden tablet:hidden desktop:block" href="{{ site.url }}">
-        <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="56" height="18">
+<nav aria-label="{{ job_seeker_header_menu.name }}" class="flex justify-between border-t-4 border-[#2D3282] px-2 tablet:px-5 desktop:px-3 py-2 desktop:py-3" data-js="navigation">
+  <div class="items-center flex bg-scale-1 tablet:bg-transparent">
+    <a class="pr-2 hidden desktop:block" href="{{ site.url }}">
+      <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="56" height="18">
         <use href="#logo-nyc-black"></use>
-        </svg>
+      </svg>
     </a>
-    <span class="desktop:pl-2 desktop:border-l desktop:border-solid desktop:border-slate-300 desktop:text-lg desktop:font-semibold">{{ __('Job seekers', 'WNYC - Navigation') }}</span>
+    <h6 class="mt-0 desktop:pl-2 desktop:border-l desktop:border-solid desktop:border-slate-300 desktop:text-lg desktop:font-semibold">{{ __('Job seekers', 'WNYC - Navigation') }}</h6>
   </div>
-  {% for menu_item in job_seeker_header_menu.get_items %}
-  <a class="o-navigation__item mr-2 desktop:py-2 desktop-px-12" width="84" height="70" href="{{ menu_item.link }}">{{ menu_item.title }}</a>
-  {% endfor %}
-  <button class="o-navigation__menu-item desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
-    <svg class="o-navigation__menu-icon icon-ui">
+  <div>
+    {% for menu_item in job_seeker_header_menu.get_items %}
+      <a class="o-navigation__item mr-2 desktop:py-2 desktop-px-12" width="84" height="70" href="{{ menu_item.link }}">{{ menu_item.title }}</a>
+    {% endfor %}
+    <button class="o-navigation__item mr-0" aria-controls="aria-c-search" aria-expanded="false" data-dialog="open" data-js="search">
+      <svg class="o-navigation__menu-icon icon-ui">
+        <title>{{__('Search', 'WNYC - Navigation')}}</title>
+        <use href="#lucide-search"></use>
+      </svg>
+    </button>
+  </div>
+  <button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
+    <svg class="icon-ui m-0 w-3 h-3">
       <use href="#lucide-menu"></use>
     </svg>
-    <span class="o-navigation__menu-label"></span>
   </button>
-</nav>
-<nav class="border-t border-solid border-slate-300 tablet:hidden desktop:hidden o-navigation" data-js="navigation">
-     <span class="o-navigation__home center-align py-2 mobile-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
 </nav>
