--- a/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
@@ -14,6 +14,7 @@
         <span class="text-xs desktop:text-sm">{{ __('Language | English', 'WNYC - Navigation') }}</span>
       </svg>
     </button>
+    {% include 'objects/languages-dropdown.twig' %}
   </div>
 </nav>
 <nav aria-label="Header menu" class="z-30 h-7 flex relative bg-white mobile-border-b-line desktop:hidden px-3 py-1 shadow-none tablet:shadow-[2px_2px_20px_0px_#D4D7DC] tablet:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
