--- a/wp-content/themes/workingnyc/src/scss/utilities/navigation/_navigation.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/navigation/_navigation.scss
@@ -1,51 +1,16 @@
 @media screen and (min-width:1112px) { 
-    .language-list-style ul {
+    .language-list ul {
       list-style-type: none;
       -webkit-column-count: 3;
       -moz-column-count: 3;
       column-count: 3;
     }
-    .language-list-style li {
-      margin-bottom: 0px;
+    .language-list li {
+        margin-right: 40px;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width:1112px) {
-    .language-list-style {
-      margin-top: -87px;
-      background-color: #FFFFFF;
-      position: absolute;
-      width: 25%;
-      margin-left: 72%;
-      padding: 16px 8px 16px 8px;
-    }
-    .language-list-style ul {
-      list-style-type: none;
-      padding-left: 0px;
-     }
-    .language-list-style li {
-      margin-bottom: 4px;
-    }
-}
-
-.language-list-no-bullet ul {
+.language-list ul {
     list-style-type: none;
-}
-
-@media screen and (max-width: 480px) {
-    .language-list-style {
-      margin-top: -103px;
-      background-color: #FFFFFF;
-      position: absolute;
-      width: 50%;
-      margin-left: 48%;
-      padding: 8px 16px 8px 16px;
-    }
-    .language-list-style ul {
-      list-style-type: none;
-      padding-left: 0px;
-     }
-    .mobile-font-size-13 {
-      font-size: 13px;
-    }
+    padding-left: 0;
 }
