--- a/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
@@ -7,13 +7,18 @@
     </a>
     <span class="hidden tablet:block desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
   </div>
-  <button class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
-    <svg class="h-3 w-3">
-      <use href="#languages-nav"></use>
-    </svg>
-    <span class="text-xs desktop:text-sm">{{ __('Language | English', 'WNYC - Navigation') }}</span>
-  </button>
-  {% include 'objects/languages-dropdown.twig' %}
+  <div>
+    <button class="border-b-line py-1 px-1 float-right flex items-center gap-x-[4px]" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+      <svg class="h-3 w-3">
+        <use href="#languages-nav"></use>
+      </svg>
+      <span class="text-xs desktop:text-sm">{{ __('Language', 'WNYC - Navigation') }}</span>
+      <svg class="h-3 w-3">
+        <use href="#lucide-chevron-down"></use>
+      </svg>
+    </button>
+    {% include 'objects/languages-dropdown.twig' %}
+  </div>
 </nav>
 <nav aria-label="{{ employer_header_menu.name }}" class="flex justify-between border-t-4 border-[#2D3282] px-2 tablet:px-5 desktop:px-3 py-2 desktop:py-3" data-js="navigation">
   <div class="items-center flex bg-scale-1 tablet:bg-transparent">
