--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -8,11 +8,14 @@
     <span class="hidden tablet:block desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
   </div>
   <div>
-    <button class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+    <button class="border-b-line py-1 px-1 float-right flex items-center gap-x-[4px]" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
       <svg class="h-3 w-3">
         <use href="#languages-nav"></use>
       </svg>
-      <span class="text-xs desktop:text-sm">{{ __('Language | English', 'WNYC - Navigation') }}</span>
+      <span class="text-xs desktop:text-sm">{{ __('Language', 'WNYC - Navigation') }}</span>
+      <svg class="h-3 w-3 fill-none stroke-black">
+        <use href="#lucide-chevron-down"></use>
+      </svg>
     </button>
     {% include 'objects/languages-dropdown.twig' %}
   </div>
