--- a/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
@@ -8,13 +8,18 @@
       </a>
       <div class="hidden tablet:block desktop:block desktop:pl-1 my-auto float-left desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC') }}</div>
     </div>
-    <button class="border-b-line py-1 px-1 float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
-      <svg class="h-3 w-3">
-        <use href="#languages-nav"></use>
-        <span class="text-xs desktop:text-sm">{{ __('Language | English', 'WNYC - Navigation') }}</span>
-      </svg>
-    </button>
-    {% include 'objects/languages-dropdown.twig' %}
+    <div>
+      <button class="border-b-line py-1 px-1 float-right flex items-center gap-x-[4px]" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+        <svg class="h-3 w-3">
+          <use href="#languages-nav"></use>
+          <span class="text-xs desktop:text-sm">{{ __('Language', 'WNYC - Navigation') }}</span>
+          <svg class="h-3 w-3 icon-ui">
+            <use href="#lucide-chevron-down"></use>
+          </svg>
+        </svg>
+      </button>
+      {% include 'objects/languages-dropdown.twig' %}
+    </div>
   </div>
 </nav>
 <nav aria-label="Header menu" class="z-30 h-7 flex relative bg-white mobile-border-b-line desktop:hidden px-3 py-1 shadow-none tablet:shadow-[2px_2px_20px_0px_#D4D7DC] tablet:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
@@ -30,5 +35,5 @@
   </div>
 </nav>
 <nav class="z-20 px-3 py-1 relative text-center bg-white tablet:hidden shadow-[2px_2px_20px_0px_#D4D7DC]" data-js="navigation">
-     <span class="m-auto mobile-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
+     <span class="m-auto">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
 </nav>
