--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -7,9 +7,9 @@
     </a>
     <span class="hidden tablet:block desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
   </div>
-  <div>
-    <button class="border-b-line py-1 px-1 float-right flex items-center gap-x-[4px]" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
-      <svg class="h-3 w-3">
+  <div class="flex items-center">
+    <button class="border-b-line py-1 px-1 flex items-center" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+      <svg class="h-3 w-3 mr-[4px]">
         <use href="#languages-nav"></use>
       </svg>
       <span class="text-xs desktop:text-sm">{{ __('Language', 'WNYC - Navigation') }}</span>
@@ -18,8 +18,23 @@
       </svg>
     </button>
     {% include 'objects/languages-dropdown.twig' %}
+    <button class="o-navigation__item mr-0" aria-controls="aria-c-search" aria-expanded="false" data-dialog="open" data-js="search">
+      <svg class="icon-ui mr-[4px]">
+        <title>{{__('Search', 'WNYC - Navigation')}}</title>
+        <use href="#lucide-search"></use>
+      </svg>
+      <span class="o-navigation__menu-label">{{__('Search', 'WNYC') }}</span>
+    </button>
+    <a class="flex desktop:hidden" href="{{ site.url }}/?s=">
+      <svg class="icon-ui mr-[4px]">
+        <title>{{__('Search', 'WNYC - Navigation')}}</title>
+        <use href="#lucide-search"></use>
+      </svg>
+      <span>{{__('Search', 'WNYC') }}</span>
+    </a>
   </div>
 </nav>
+{% include 'search/search-overlay.twig' %}
 <nav aria-label="{{ job_seeker_header_menu.name }}" class="flex justify-between border-t-4 border-[#2D3282] px-2 tablet:px-5 desktop:px-3 py-2 desktop:py-3" data-js="navigation">
   <div class="items-center flex bg-scale-1 tablet:bg-transparent">
     <a class="pr-2 hidden desktop:block" href="{{ site.url }}">
@@ -33,12 +48,6 @@
     {% for menu_item in job_seeker_header_menu.get_items %}
       <a class="o-navigation__item mr-2 desktop:py-2 desktop-px-12" width="84" height="70" href="{{ menu_item.link }}">{{ menu_item.title }}</a>
     {% endfor %}
-    <button class="o-navigation__item mr-0" aria-controls="aria-c-search" aria-expanded="false" data-dialog="open" data-js="search">
-      <svg class="o-navigation__menu-icon icon-ui">
-        <title>{{__('Search', 'WNYC - Navigation')}}</title>
-        <use href="#lucide-search"></use>
-      </svg>
-    </button>
   </div>
   <button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
     <svg class="icon-ui m-0 w-3 h-3">
