--- a/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
@@ -9,13 +9,13 @@
       <div class="hidden tablet:block desktop:block desktop:pl-1 my-auto float-left desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC') }}</div>
     </div>
     <div>
-      <button class="border-b-line py-1 px-1 float-right flex items-center gap-x-[4px]" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
-        <svg class="h-3 w-3">
+      <button class="border-b-line py-1 px-1 flex items-center" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+        <svg class="h-3 w-3 mr-[4px]">
           <use href="#languages-nav"></use>
-          <span class="text-xs desktop:text-sm">{{ __('Language', 'WNYC - Navigation') }}</span>
-          <svg class="h-3 w-3 icon-ui">
-            <use href="#lucide-chevron-down"></use>
-          </svg>
+        </svg>
+        <span class="text-xs desktop:text-sm">{{ __('Language', 'WNYC - Navigation') }}</span>
+        <svg class="h-3 w-3 fill-none stroke-black">
+          <use href="#lucide-chevron-down"></use>
         </svg>
       </button>
       {% include 'objects/languages-dropdown.twig' %}
