added all footers and added switcher depending on page

--- a/wp-content/themes/workingnyc/views/base.twig
+++ b/wp-content/themes/workingnyc/views/base.twig
@@ -51,7 +51,7 @@
     {% block content %}{% endblock %}
 
     {% block footer %}
-      {% include 'objects/attribution.twig' %}
+      {% include 'objects/footer.twig' %}
     {% endblock %}
 
     {# SVG Sprite Paths #}
