--- a/wp-content/themes/workingnyc/views/objects/employer-footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/employer-footer.twig
@@ -1,11 +1,12 @@
-<footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative my-2 mx-3 desktop:my-5 desktop:mx-8" role="contentinfo">
+<footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative px-2 py-3 tablet:px-8 tablet:py-5 " role="contentinfo">
   <div class="pb-3 desktop:pb-5">
   <nav class="o-attribution__flex pb-3"> 
      <div class="tablet:float-left desktop:float-left pb-2 tablet:pb-0 desktop:pb-0">
        <h5>{{ __('How can we help you today?', 'WNYC') }}</h5>
     </div>
     <div class="tablet:float-right desktop:float-right">
-      <a class="btn btn-small tablet:btn btn-secondary pointer-events-auto" href="#page-heading">Send us feedback</a>
+    {# TODO: feedback URL should come from global field + shortcode #}
+      <a class="btn btn-small tablet:btn btn-secondary pointer-events-auto" href="https://airtable.com/appHMkkbuN08pgjwz/shrfQGpXvo9mmmHpJ">Send us feedback</a>
     </div>
   </nav>
   <nav class="o-attribution__flex border-t border-slate-300 pt-3 tablet:pt-0 desktop:pt-0">
