--- a/wp-content/themes/workingnyc/views/components/breadcrumbs.twig
+++ b/wp-content/themes/workingnyc/views/components/breadcrumbs.twig
@@ -1,7 +1,21 @@
 {# @Type   Element #}
 {# @For    Generic Templates #}
 <nav class="breadcrumbs" aria-label="Breadcrumb">
-  <a href="{{ site.url }}">{{ __('Home', 'WNYC') }}</a>
+  <a
+  {% if employer == true %}
+    {% if options.employers_link is defined %}
+      href="{{ options.employers_link }}"
+    {% else %}
+      href="{{ site.url }}"
+    {% endif %}
+  {% else %}
+    {% if options.job_seekers_link is defined %}
+      href="{{ options.job_seekers_link }}"
+    {% else %}
+      href="{{ site.url }}"
+    {% endif %}
+  {% endif %}
+  >{{ __('Home', 'WNYC') }}</a>
 
   {% if crumbs %}
   {% for crumb in crumbs %}
