--- a/wp-content/themes/workingnyc/views/search/search-results.twig
+++ b/wp-content/themes/workingnyc/views/search/search-results.twig
@@ -5,7 +5,20 @@
       <header class="o-header block px-4 tablet:px-6">
         <div class="tablet:px-6" style="max-width: var(--nyco-dimension-content-width)"> {# TODO: figure out how to import px-12 from tailwind #}
           <div class="c-utility p-0 min-h-0" style="margin-bottom: calc(var(--nyco-typography-margin-bottom) * 1.5);">
-            <a class="link-icon mie-auto" href="{{ site.url }}">
+            <a class="link-icon mie-auto" 
+            {% if employer == true %}
+              {% if options.employers_link is defined %}
+                href="{{ options.employers_link }}"
+              {% else %}
+                href="{{ site.url }}"
+              {% endif %}
+            {% else %}
+              {% if options.job_seekers_link is defined %}
+                href="{{ options.job_seekers_link }}"
+              {% else %}
+                href="{{ site.url }}"
+              {% endif %}
+            {% endif %}>
               <svg aria-hidden="true" class="icon-ui rtl:flip">
                 <use href="#lucide-chevron-left"></use>
               </svg>
