--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -3,6 +3,9 @@
  */
 
 // Creating classes as copies of the tailwind classes because some imports aren't working
+    .ml-auto {
+      margin-left: auto;
+    }
 @media screen and (min-width:1112px) { 
     .desktop-py-121 {
       padding-top: 121px;
