--- a/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
@@ -22,7 +22,7 @@
     </div>
   </div>
 </nav>
-<nav aria-label="Header menu" class="z-30 h-7 flex relative bg-white mobile-border-b-line desktop:hidden px-3 py-1 shadow-none tablet:shadow-[2px_2px_20px_0px_#D4D7DC] tablet:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
+<nav class="z-30 h-7 flex relative bg-white desktop:hidden px-3 py-1 shadow-none tablet:shadow-[2px_2px_20px_0px_#D4D7DC] tablet:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
   <div class="o-navigation__home m-auto tablet:ml-0 bg-scale-1 tablet:bg-transparent">
   <a href="{{ site.url }}">
     <svg aria-hidden="true" class="o-navigation__svg hidden tablet:flex fill-text text-brand" width="51" height="16">
