--- a/wp-content/themes/workingnyc/src/scss/_imports.scss
+++ b/wp-content/themes/workingnyc/src/scss/_imports.scss
@@ -5,6 +5,7 @@
 @forward 'utilities/sizes/sizes';
 @forward 'utilities/colors/colors';
 @forward 'utilities/navigation/navigation';
+@forward 'utilities/text/text';
 @forward '@nycopportunity/pttrn-scripts/src/spinner/spinner';
 
 @forward 'tokens';
