--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -6,6 +6,9 @@
     .ml-auto {
       margin-left: auto;
     }
+    .accordion-item.active .accordion-content {
+      display: block;
+     }
 @media screen and (min-width:1112px) { 
     .desktop-py-121 {
       padding-top: 121px;
